# radian-rag-v2

./: .dockerignore  .env.example  .gitignore  .vercelignore  API_DOCUMENTATION.md  COOLIFY_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  FIXES_APPLIED.md  README.md  SECURITY.md  VERCEL_BACKEND_SETUP.md  VERCEL_COMPATIBILITY_REPORT.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_CHECKLIST.md  app.py  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
_old/: package-lock.json
_old/src/: index.css
api/: [...path].py  index.py  test.py
backend/: PERFORMANCE_OPTIMIZATION.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py
backend/app/models/: schemas.py
backend/app/repositories/: patient_chunks.py  rag_log.py
backend/app/services/: rag.py
backend/migrations/: 001_add_ivfflat_index_and_function.sql  002_create_rag_log_table.sql  003_add_latency_to_rag_log.sql  004_create_rag_test_as_table.sql  005_create_as_rag_v2_test_table.sql  005_create_as_rag_v3_test_table.sql  006_add_latency_to_test_tables.sql  README.md
backend/scripts/: README_TESTING.md  check_performance.py  test_rag_performance.py
src/: App.tsx
src/components/: ConversationalAgent.tsx  Layout.tsx  PatientRoster.tsx  ProtectedRoute.tsx  QuickLinks.tsx  SnapshotPanel.tsx  SpecialtyPerspectives.tsx
src/hooks/: useStreamingText.ts
src/pages/: DoctorScreen.tsx  HomeScreen.tsx  PatientRosterScreen.tsx
(+25 files in other folders)
